# uid

./: .gitignore  30minutes_report.md  30minutes_report_en.md  CHANGELOG.md  KNOWN_LIMITATIONS.md  LICENSE  LICENSE-COMMERCIAL  LICENSE-NONCOMMERCIAL  README.md  README_en.md  ROADMAP.md  convert_minimind_data.py  convert_sft_conversations.py  data_loaders.py  download_chinese_tokenizer.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_uid_on_minimind.py  theory.md  theory_en.md  tmp.md
cid/: __init__.py  cid_layer.py  colored_noise.py  hopfield_potential.py  memory_kernel.py  vortex_field.py
experiments/: __init__.py  run_ablation.py  run_all.py  run_critical_exponents.py  run_energy_benchmark.py  run_scaling_law.py
fid/: curvature.py  fid_layer.py  fisher_metric.py
model/: __init__.py  known_tricks_baseline.py  model_baseline.py  model_uid.py  modern_transformer.py
output/ablation_v2.1/: results.json
output/minimind_100k/energy_v2.2/: results.json
output/minimind_100k_100M/: run_all_summary.json
output/minimind_100k_100M/ablation_v2.1/: results.json  summary.json
output/minimind_100k_30M/: .done_ablation  run_all_summary.json
output/minimind_100k_30M/ablation_v2.1/: results.json  summary.json
qid/: qid_layer.py  quantum_noise.py
results/: README.md
results/phase1/: REPORT.md  REPORT.template.md  UID Phase 1 Report — ET Symmetric Term Validation on MiniMind Chinese Corpus.md
results/phase1/independent-reports/: README.md  REPRODUCTION_en.md  REPRODUCTION_zh.md
results/phase1/independent-reports/outputs/outputs/: combined_summary.json  energy_summary.json  scaling_summary.json  sl200_3seed_summary.json  sl200_summary.json
results/phase1/independent-reports/outputs/outputs/ablation_100k_seed42/: results.json  summary.json
results/phase1/independent-reports/outputs/outputs/ablation_100k_seed43/: results.json  summary.json
results/phase1/independent-reports/outputs/outputs/ablation_100k_seed44/: results.json  summary.json
results/phase1/independent-reports/outputs/outputs/critical_exponents/: results.json
results/phase1/independent-reports/outputs/outputs/infer_efficiency/: infer_efficiency.json
results/phase1/independent-reports/outputs/outputs/minimind_100k/ablation_v2.1/: summary.json
results/phase1/independent-reports/outputs/outputs/provenance/: data_checksum.txt  git_head.txt  gpu.txt  pip_versions.txt
results/phase1/independent-reports/outputs/outputs/sl200_cid_full_10M/: results.json
results/phase1/independent-reports/outputs/outputs/sl200_cid_full_10M_seed43/: results.json
results/phase1/independent-reports/outputs/outputs/sl200_cid_full_10M_seed44/: results.json
results/phase1/independent-reports/outputs/outputs/sl200_transformer_10M/: results.json
results/phase1/independent-reports/outputs/outputs/sl200_transformer_10M_seed43/: results.json
results/phase1/independent-reports/outputs/outputs/sl200_transformer_10M_seed44/: results.json
results/phase1/independent-reports/outputs/outputs/sl200_transformer_plus_tricks_10M/: results.json
results/phase1/independent-reports/outputs/outputs/sl200_transformer_plus_tricks_10M_seed43/: results.json
results/phase1/independent-reports/outputs/outputs/sl200_transformer_plus_tricks_10M_seed44/: results.json
results/schemas/: ablation_summary_v1.json  correlation_length_v1.json  critical_exponents_v1.jso  energy_v2.1_batch4.json  manifest_v1.json  report_md.json  scaling_law_v1.json
tests/: __init__.py  conftest.py  test_ablation_suite.py  test_avalanche_detector.py  test_cid_layer.py  test_critical_exponents.py  test_data_loaders.py  test_energy_meter.py  test_fid_layer.py  test_modern_transformer.py  test_qid_layer.py  test_run_scaling_law.py  test_uid_causality.py
uid_theory/cid/: cid_layer.py  colored_noise.py  hopfield_potential.py  memory_kernel.py  test_et_lyapunov.py  vortex_field.py
uid_theory/fid/: __init__.py  curvature.py  fid_layer.py  fisher_metric.py
uid_theory/qid/: __init__.py  berry_phase.py  qid_layer.py  quantum_noise.py
uid_theory/verification/: __init__.py  ablation_suite.py  correlation_length.py  critical_exponents.py  energy_meter.py  powerlaw_estimator.py  prediction_test.py  test_correlation_length.py
verification/: __init__.py  ablation_suite.py  avalanche_detector.py  critical_exponents.py  energy_meter.py  powerlaw_estimator.py  prediction_test.py
workflows/: ci.yml  nightly.yml
(+2 files in other folders)
